--- a/unreal-analytics-server/Cargo.toml
+++ b/unreal-analytics-server/Cargo.toml
@@ -10,7 +10,7 @@ serde = "1.0.188"
 rocket = { version = "0.5.0", features = ["json"] }
 toml = "0.8.10"
 futures = "0.3"
-webhook = "2.1.2"
+serenity = "0.12"
 
 [dependencies.mongodb]
 version = "2.8.0"
@@ -18,4 +18,5 @@ default-features = false
 features = ["sync"]
 
 [profile.dev]
-opt-level = 1
+opt-level = 0
+incremental = true
