--- a/unreal-analytics-server/Cargo.toml
+++ b/unreal-analytics-server/Cargo.toml
@@ -12,6 +12,7 @@ toml = "0.8.10"
 futures = "0.3"
 serenity = "0.12"
 tokio = "1.36.0"
+chrono = "0.4.34"
 
 [dependencies.mongodb]
 version = "2.8.0"
