--- a/unreal-analytics-server/Cargo.toml
+++ b/unreal-analytics-server/Cargo.toml
@@ -13,6 +13,7 @@ futures = "0.3"
 serenity = "0.12"
 tokio = "1.36.0"
 chrono = "0.4.34"
+dia-i18n = "0.10.0"
 
 [dependencies.mongodb]
 version = "2.8.0"
