--- a/unreal-analytics-server/config/App.toml
+++ b/unreal-analytics-server/config/App.toml
@@ -1,5 +1,6 @@
+block_http = true
 mongodb_connection_string = "mongodb://10.0.1.9:27017"
 
 [discord_config]
 send_messages = true
-notify_editor_sessions = true
+notify_editor_sessions = false
