--- a/unreal-todo-list/Cargo.toml
+++ b/unreal-todo-list/Cargo.toml
@@ -5,8 +5,7 @@ edition = "2021"
 
 [dependencies]
 serde = "1.0.188"
-rocket = { version = "0.5.0", features = ["json"] }
-rocket_ws = "0.1.0"
+serde_json = "1.0"
 toml = "0.8.10"
 futures = "0.3"
 tokio = "1.36.0"
@@ -14,6 +13,9 @@ chrono = "0.4.34"
 dia-i18n = "0.10.0"
 once_cell = "1.19.0"
 tungstenite = "0.21.0"
+tokio-tungstenite = "*"
+futures-channel = "0.3"
+futures-util = "0.3"
 
 [dependencies.mongodb]
 version = "2.8.0"
