--- a/unreal-todo-list/Cargo.toml
+++ b/unreal-todo-list/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-serde = "1.0.188"
+serde = { version = "1.0.188", features = ["derive"] }
 serde_json = "1.0"
 toml = "0.8.10"
 futures = "0.3"
@@ -16,6 +16,8 @@ tungstenite = "0.21.0"
 tokio-tungstenite = "*"
 futures-channel = "0.3"
 futures-util = "0.3"
+mio = "0.8.11"
+jsonwebtoken = "9"
 
 [dependencies.mongodb]
 version = "2.8.0"
