--- a/unreal-todo-list/Cargo.toml
+++ b/unreal-todo-list/Cargo.toml
@@ -18,6 +18,9 @@ futures-channel = "0.3"
 futures-util = "0.3"
 mio = "0.8.11"
 jsonwebtoken = "9"
+reqwest = { version = "0.11", features = ["json"] }
+http = "0.2.11"
+rocket = { version = "0.5.0", features = ["json"] }
 
 [dependencies.mongodb]
 version = "2.8.0"
