--- a/unreal-todo-list/config/App.toml
+++ b/unreal-todo-list/config/App.toml
@@ -1,5 +1,11 @@
 mongodb_connection_string = "mongodb://10.0.1.9:27017"
+
+[websocket]
 address = "0.0.0.0"
 port = 9092
 
-github_app_id = 852598
+[github]
+app_id = 852598
+app_key_file = "config/keys/unreal-todo-list-app.2024-03-08.private-key.pem"
+app_name = "Unreal Todo List App"
+repo = "nicholas477/Cactus-UE5"
