--- a/unreal-todo-list/config/Rocket.toml
+++ b/unreal-todo-list/config/Rocket.toml
@@ -1,9 +1,9 @@
+[default.shutdown]
+ctrlc = false
+signals = ["term", "hup"]
+grace = 10
+mercy = 5
+
 [default]
 address = "0.0.0.0"
-port = 9092
-
-[production]
-log_level = "critical"
-
-[debug]
-log_level = "normal"
+port = 9093
