--- a/unreal-todo-list/Cargo.toml
+++ b/unreal-todo-list/Cargo.toml
@@ -21,6 +21,7 @@ jsonwebtoken = "9"
 reqwest = { version = "0.11", features = ["json"] }
 http = "0.2.11"
 rocket = { version = "0.5.0", features = ["json"] }
+async-broadcast = "0.7.0"
 
 [dependencies.mongodb]
 version = "2.8.0"
