Added support for issues opening/closing

--- a/unreal-todo-list/Dockerfile
+++ b/unreal-todo-list/Dockerfile
@@ -1,6 +1,7 @@
-FROM rust:1.74.1
+FROM rust:latest
 
 ENV ROCKET_CONFIG=/app/config/Rocket.toml
+ENV RUST_BACKTRACE=1
 WORKDIR /app
 COPY . .
 RUN cargo install --path .
