--- a/unreal-todo-list/Cargo.toml
+++ b/unreal-todo-list/Cargo.toml
@@ -19,7 +19,7 @@ futures-util = "0.3"
 mio = "0.8.11"
 jsonwebtoken = "9"
 reqwest = { version = "0.11", features = ["json"] }
-http = "0.2.11"
+http_new = { package = "http", version = "1.0.0" }
 rocket = { version = "0.5.0", features = ["json"] }
 async-broadcast = "0.7.0"
 
